--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,16 @@
   <div *ngFor="let item of posts; let i = index">
     <div>
       <div>
-    <mat-grid-tile [ngClass]="item.clicked? 'clicked':''" (click)="tileClicked(item)"
-      ><app-post
-        [userId]="item.userId"
-        [postId]="item.id"
-        [clicked]="item.clicked"
-      ></app-post
-    ></mat-grid-tile>
-  </div>
-  </div> 
+        <mat-grid-tile
+          [ngClass]="item.clicked ? 'clicked' : ''"
+          (click)="tileClicked(item)"
+          ><app-post
+            [userId]="item.userId"
+            [postId]="item.id"
+            [clicked]="item.clicked"
+          ></app-post
+        ></mat-grid-tile>
+      </div>
+    </div>
   </div>
 </mat-grid-list>
