--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
-mat-grid-tile.clicked {
-    background: lightpink;
-}
 mat-grid-tile {
-    background: lightblue;
+    background: grey;
 }
 mat-grid-list{
-    height: 100vh;
+    width: 65vw;
+    height: 95vh;
+    border-style: solid;
+    border-color: #7b7a7f;
+    opacity: 0.85;
 }
