--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -3,7 +3,7 @@
   width: 189px;
   height: 87px;
   border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  perspective: 1000px; 
 }
 
 /* This container is needed to position the front and back side */
