--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="10" rowHeight="fit">
+<mat-grid-list cols="{{columns}}" rowHeight="fit">
   <div *ngFor="let item of posts; let i = index">
     <div>
       <div>
